--- a/public/index.html
+++ b/public/index.html
@@ -84,14 +84,15 @@
                     </tr>
 
                 </tbody>
-
             </table>
-
         </div>
+
+        <canvas id="myChart" width="400" height="400"></canvas>
 
 
     </div>
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js'></script>
+    <script src='angular/angular.js'></script>
+    <script src='chart.js/dist/Chart.js'></script>
     <script src='controllers/controller.js'></script>
 
 </body>
